--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,6 +1,18 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+
 html {
     font-size: 21px;
     font-family: sans-serif;
     line-height: 1.5;
     color: #1A2533;
+}
+
+body {
+    width: 80vw;
+    max-width: 800px;
+    margin: 25px auto auto;
 }
